# PASS-MAN

./: Cargo.toml  README.md
src/: handlers.rs  main.rs
src/db/: main.rs  mod.rs
src/db/orm/: mod.rs  passwords.rs  user.rs
src/handlers/commands/: exit.rs  get.rs  list.rs  mod.rs  pass_gen.rs  save.rs  shell.rs  simple_pass_gen.rs
src/utils/: encoder.rs  get_user_data.rs  mod.rs
