[package]
name = "Pass_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
clipboard = "0.5"
rusqlite = { version = "0.32.1", features = ["bundled"] }
once_cell = "1.17.1"
aes = "0.8"
cipher = { version = "0.4", features = ["block-padding"] }
block-padding = "0.3"
base64 = "0.22.1"

